Fix margins, fonts and link styles
Remove mention of visiting website as it is already in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
-  <body>
-      <div>
+  <body style="margin-top: 1.25rem;">
+      <div style="margin-bottom: 2rem !important;">
           <div style="float:left">
-      <img src="https://www.rse.ox.ac.uk/sites/default/files/rse/site-logo/2024_oxrse_next_to_oxford.svg" alt="OxRSE Logo" width="320"/>
+      <img src="https://www.rse.ox.ac.uk/sites/default/files/rse/site-logo/2024_oxrse_next_to_oxford.svg" alt="OxRSE Logo" width="265"/>
           </div>
           <div style="float:left; margin-left: 1em">
-              <span style="font-size: 2rem; color: #092044">Oxford Research Software Engineering Group</span>
+              <span class="grouptitle"><a href="https://www.rse.ox.ac.uk">Oxford Research Software Engineering Group</a></span>
           </div>
       </div>
-      <nav style="clear: both; float: none">
+      <nav style="clear: both; float: none;">
           <ul>
               <li><a href="https://www.rse.ox.ac.uk">Home</a></li>
               <li><a href="https://www.rse.ox.ac.uk/details">How It Works</a></li>
