style: update current nav tab to match main website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
               <li><a href="https://www.rse.ox.ac.uk/contact">Get In Touch</a></li>
               <li><a href="https://www.rse.ox.ac.uk/vacancies">Work With Us</a></li>
               <li><a href="https://www.rse.ox.ac.uk/resources">Resources</a></li>
-              <li><a>Publications</a></li>
+              <li><a href="." class="current">Publications</a></li>
           </ul>
       </nav>
 
